# JuxtaBAM

./: .gitignore  LICENSE  README.md  input_info_example.tsv  pyproject.toml
juxtabam/: pairwise_bcftools.py  slurm_utils.py  utils.py
scripts/: juxtabam_plot.py  juxtabam_run.py
